# musubi-tuner-gui

./: .gitignore  .gitmodules  README.md  config.toml  gui.bat  gui.py  gui.sh  hello.py  pyproject.toml  requirements.txt  test.toml
musubi_tuner_gui/: class_accelerate_launch.py  class_advanced_training.py  class_gui_config.py  class_huggingface.py  class_latent_caching.py  class_metadata.py  class_model.py  class_network.py  class_optimizer_and_scheduler.py  class_save_load.py  class_tensorboard.py  class_text_encoder_outputs_caching.py  class_training.py  common_gui.py  custom_logging.py  lora_gui.py
test/: test.MD
test/cache_directory/: Dariusz_Zawadzki_0512x0512_hv.safetensors  Dariusz_Zawadzki_2_0512x0512_hv.safetensors  Dariusz_Zawadzki_2_hv_te.safetensors  Dariusz_Zawadzki_3_0512x0512_hv.safetensors  Dariusz_Zawadzki_3_hv_te.safetensors  Dariusz_Zawadzki_4_0512x0512_hv.safetensors  Dariusz_Zawadzki_4_hv_te.safetensors  Dariusz_Zawadzki_5_0512x0512_hv.safetensors  Dariusz_Zawadzki_5_hv_te.safetensors  Dariusz_Zawadzki_6_0512x0512_hv.safetensors  Dariusz_Zawadzki_6_hv_te.safetensors  Dariusz_Zawadzki_7_0512x0512_hv.safetensors  Dariusz_Zawadzki_7_hv_te.safetensors  Dariusz_Zawadzki_8_0512x0512_hv.safetensors  Dariusz_Zawadzki_8_hv_te.safetensors  Dariusz_Zawadzki_hv_te.safetensors
test/config/: dataset.toml
uv/linux/: uvx
